--- a/List/MainWindow.xaml
+++ b/List/MainWindow.xaml
@@ -55,7 +55,7 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Image Source="{Binding XPath =@photo }" Width="200"
+                    <Image Source="{Binding XPath =@photo }" Width="200"<!---->
                            Grid.Column="0" Grid.Row="0"/>
                     <StackPanel Grid.Row="0" Grid.Column="1">
                         <Label Content="LastName" Margin="0 0 0 5" />
